objects/Five9__Five9ReportFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Five9__default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__report_field_name__c</fullName>
        <label>report_field_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__task_field_name__c</fullName>
        <label>task_field_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Five9ReportFieldMapping</label>
</CustomObject>